# lcms2.rs.old2

./: .gitignore  Cargo.toml  README.md  build.rs  lcms2.rs.code-workspace  wrapper.h
.cargo/: config.toml
bindings/: build.rs
src/: conversions.rs  io.rs  lib.rs  math.rs  plugins.rs  state.rs  testing.rs  types.rs
src/conversions/: pcs.rs  whitepoint.rs
src/io/: big_endian.rs  file_file.rs  file_mem.rs  file_null.rs  io_handler.rs  little_endian.rs  mod.rs
src/plugins/: formatter.rs  intent.rs  interp.rs  optimization.rs  para_curve.rs  plugin.rs  tag.rs  tag_type.rs  transform.rs
src/plugins/tag_type/: chromaticity_tag.rs  chromaticity_type.rs  colorant_order.rs  colorant_order_tag.rs  colorant_table.rs  colorant_table_type.rs  curve_tag.rs  curve_type.rs  data_type.rs  date_time_type.rs  lut16_type.rs  lut8_type.rs  lut_a_to_b_type.rs  xyz_type.rs
src/state/: chunks.rs  context.rs  error_handler.rs  mod.rs
src/state/chunks/: adaption_state.rs  alarm_codes.rs  error_handler.rs  formatters.rs  intents.rs  interpolation.rs  optimizations.rs  parametric_curves.rs  tag.rs  tag_type.rs  transform.rs
src/types/: cie_jch.rs  cie_lab.rs  cie_lch.rs  cie_xyy.rs  cie_xyz.rs  curve_segment.rs  data.rs  date_time_number.rs  encoded_xyz_number.rs  icc_header.rs  matrix.rs  mlu.rs  mod.rs  named_color_list.rs  pipeline.rs  profile.rs  profile_id.rs  seq.rs  signature.rs  tag_entry.rs  tone_curve.rs  transform.rs  vector.rs
src/types/pipeline/: stage.rs
src/types/signatures/: color_space.rs  (+8 more)
tests/: cpp.rs  parity.rs  profile.rs
tests/include/: bindings.rs
(+1 files in other folders)
