[package]
authors = ["Stefan Kewatt <stefan.kewatt@gmail.com>"]
edition = "2021"
name = "lcms2"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[features]
default = []
use_little_endian = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
chrono = "0.4"
paste = "1.0.6"

[dev-dependencies]
test-case = "2.0.0"
